--- a/AutoTest/src/flowCtrl/flowCtrl.vcproj
+++ b/AutoTest/src/flowCtrl/flowCtrl.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="xml"
-	ProjectGUID="{FFE9099A-9727-435E-95C6-959916D95803}"
-	RootNamespace="xml"
+	Name="flowCtrl"
+	ProjectGUID="{00A38D92-AE81-478E-8BBE-9EAFB44F8793}"
+	RootNamespace="flowCtrl"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DLL_EXPORTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLOWCTRL_EXPORTS;DLL_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,6 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="E:\Code\AutoTest\Debug\xml.lib&#x0D;&#x0A;E:\Code\AutoTest\Debug\ToolBox.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -114,7 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XML_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLOWCTRL_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -171,23 +172,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\third\tinyxml\tinystr.cpp"
+				RelativePath="..\common\BaseThread.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\third\tinyxml\tinyxml.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\third\tinyxml\tinyxmlerror.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\third\tinyxml\tinyxmlparser.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\xml.cpp"
+				RelativePath=".\FlowCtrl.cpp"
 				>
 			</File>
 		</Filter>
@@ -197,19 +186,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\third\tinyxml\tinystr.h"
+				RelativePath="..\common\BaseThread.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\third\tinyxml\tinyxml.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\include\typedef.h"
-				>
-			</File>
-			<File
-				RelativePath=".\xml.h"
+				RelativePath=".\FlowCtrl.h"
 				>
 			</File>
 		</Filter>
