--- a/AutoTest/src/TestMain/TestMain.vcproj
+++ b/AutoTest/src/TestMain/TestMain.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="E:\Code\AutoTest\Debug\flowctrl.lib"
+				AdditionalOptions="E:\Code\AutoTest\Debug\flowctrl.lib&#x0D;&#x0A;E:\Code\AutoTest\Debug\testDllBox.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
