--- a/AutoTest/src/TestDllBox/TestDllBox.vcproj
+++ b/AutoTest/src/TestDllBox/TestDllBox.vcproj
@@ -172,6 +172,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\common\BaseThread.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\TestDllBox.cpp"
 				>
 			</File>
@@ -181,6 +185,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\common\BaseThread.h"
+				>
+			</File>
 			<File
 				RelativePath=".\TestDllBox.h"
 				>
