--- a/AutoTest/src/AutoBin/AutoBin.vcproj
+++ b/AutoTest/src/AutoBin/AutoBin.vcproj
@@ -207,6 +207,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\InputName.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -250,6 +254,10 @@
 			</File>
 			<File
 				RelativePath="..\..\third\treeCtrl\CustomDrawUtils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\InputName.h"
 				>
 			</File>
 			<File
