--- a/AutoTest/src/FeatureDetector/FeatureDetector.vcproj
+++ b/AutoTest/src/FeatureDetector/FeatureDetector.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="ToolBox"
-	ProjectGUID="{C617A6F6-C099-42D2-B62C-37399A9807B1}"
-	RootNamespace="ToolBox"
+	Name="FeatureDetector"
+	ProjectGUID="{7EEF5538-0AC3-441D-A96A-5644D9518644}"
+	RootNamespace="FeatureDetector"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -41,7 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;TOOLBOX_EXPORTS;DLL_EXPORTS"
+				AdditionalIncludeDirectories="&quot;E:\Code\opencv-2.4.3\install\include&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FEATUREDETECTOR_EXPORTS;DLL_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="E:\Code\opencv-2.4.3\install\lib\opencv_core243d.lib&#x0D;&#x0A;E:\Code\opencv-2.4.3\install\lib\opencv_features2d243d.lib&#x0D;&#x0A;E:\Code\opencv-2.4.3\install\lib\opencv_highgui243d.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -114,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;TOOLBOX_EXPORTS;DLL_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FEATUREDETECTOR_EXPORTS;DLL_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -171,7 +173,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\toolBox.cpp"
+				RelativePath=".\FeatureDetector.cpp"
 				>
 			</File>
 		</Filter>
@@ -181,7 +183,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\toolBox.h"
+				RelativePath=".\FeatureDetector.h"
 				>
 			</File>
 		</Filter>
