--- a/AutoTest/src/TestDllThread/TestDllThread.vcproj
+++ b/AutoTest/src/TestDllThread/TestDllThread.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="FeatureDetector"
-	ProjectGUID="{7EEF5538-0AC3-441D-A96A-5644D9518644}"
-	RootNamespace="FeatureDetector"
+	Name="TestDllThread"
+	ProjectGUID="{36EE2931-57C1-4724-94E4-0A7512E71858}"
+	RootNamespace="TestDllThread"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -41,8 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;E:\Code\opencv-2.4.3\install\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FEATUREDETECTOR_EXPORTS;DLL_EXPORTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;TESTDLLTHREAD_EXPORTS;DLL_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -61,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="E:\Code\opencv-2.4.3\install\lib\opencv_core243d.lib&#x0D;&#x0A;E:\Code\opencv-2.4.3\install\lib\opencv_features2d243d.lib&#x0D;&#x0A;E:\Code\opencv-2.4.3\install\lib\opencv_highgui243d.lib&#x0D;&#x0A;E:\Code\opencv-2.4.3\install\lib\opencv_nonfree243d.lib"
+				AdditionalOptions="E:\Code\AutoTest\Debug\toolbox.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -116,7 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FEATUREDETECTOR_EXPORTS;DLL_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;TESTDLLTHREAD_EXPORTS;DLL_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -134,6 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="E:\Code\AutoTest\Release\toolbox.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -173,7 +173,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\FeatureDetector.cpp"
+				RelativePath="..\common\BaseThread.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\TestDllThread.cpp"
 				>
 			</File>
 		</Filter>
@@ -183,7 +187,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\FeatureDetector.h"
+				RelativePath="..\common\BaseThread.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TestDllThread.h"
 				>
 			</File>
 		</Filter>
