--- a/visionSys/src/proc/visionRcm/Makefile
+++ b/visionSys/src/proc/visionRcm/Makefile
@@ -4,9 +4,9 @@ OBJECTS = visionRcm.o
 
 CFLAGS = -g -Wall -I../../../include -I../../../third
 
-LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output -lplatform -lmt -lxml -lpthread -lrt
+LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output -lplatform -lmt -lxml -lproperty -lpthread -lrt
 
-CXX = g++
+CXX = arm-linux-g++
 
 $(TARGET) : $(OBJECTS)
 	$(CXX) -o $(TARGET) $(OBJECTS) $(LDFLAGS)
