--- a/visionSys/src/proc/visionBm/Makefile
+++ b/visionSys/src/proc/visionBm/Makefile
@@ -1,6 +1,6 @@
-TARGET = ../../../output/visionVelocity
+TARGET = ../../../output/visionBm
 
-OBJECTS = visionVelocity.o
+OBJECTS = visionBm.o
 
 CFLAGS = -g -Wall -I../../../include -I../../../third
 
@@ -11,8 +11,8 @@ CXX = arm-linux-g++
 $(TARGET) : $(OBJECTS)
 	$(CXX) -o $(TARGET) $(OBJECTS) $(LDFLAGS)
 	
-visionVelocity.o : visionVelocity.cpp visionVelocity.h
-	$(CXX) $(CFLAGS) -c visionVelocity.cpp visionVelocity.h
+visionBm.o : visionBm.cpp visionBm.h
+	$(CXX) $(CFLAGS) -c visionBm.cpp visionBm.h
 	
 clean:
 	rm *.o
