--- a/visionSys-V2.0/src/proc/visionBm/Makefile
+++ b/visionSys-V2.0/src/proc/visionBm/Makefile
@@ -1,18 +1,19 @@
-TARGET = ../../../output/visionDeamon
+TARGET = ../../../output/visionBm
 
-OBJECTS = visionDeamon.o
+OBJECTS = visionBm.o
 
 CFLAGS = -g -rdynamic -Wall -I../../../include -I../../../third
 
 LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output  -lplatform -lvo -lmt -llog -lxml -lpthread -lrt
+
 
 CXX = arm-linux-g++ 
 
 $(TARGET) : $(OBJECTS)
 	$(CXX) -o $(TARGET) $(OBJECTS) $(LDFLAGS)
 	
-visionDeamon.o : visionDeamon.cpp visionDeamon.h
-	$(CXX) $(CFLAGS) -c visionDeamon.cpp visionDeamon.h
+visionBm.o : visionBm.cpp visionBm.h
+	$(CXX) $(CFLAGS) -c visionBm.cpp visionBm.h
 	
 clean:
-	rm *.o
+	rm *.o *.gch
