增加定时纠偏机制
简介：纠偏机制解决定时器累积误差

--- a/visionSys-V2.0/src/proc/visionVelocity/Makefile
+++ b/visionSys-V2.0/src/proc/visionVelocity/Makefile
@@ -4,9 +4,8 @@ OBJECTS = visionVelocity.o
 
 CFLAGS = -g -rdynamic -Wall -I../../../include -I../../../third
 
-LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output  -lplatform -lvo -lmt -llog -lxml -lpthread -lrt
+LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output -L../../../third/can/lib -lplatform -lvo -lmt -llog -lxml -lcan -lsbus -lsocketcan -lpthread -lrt
 
-#LDFLAGS = -Wl,-rpath,./ -L../../../output/lib -L../../../output -lplatform -lmt -lxml -lpthread -lrt
 
 CXX = arm-linux-g++ 
 
